Bug 1556076. Restore checking the return value of MakeInputStream in nsIconChannel on mac. r=aosmond a=jcristau

Summary: Bug 1520868 accidentally removed this check.

Reviewers: aosmond

Reviewed By: aosmond

Bug #: 1556076

Differential Revision: https://phabricator.services.mozilla.com/D33892